# embdguard

./: .gitignore  README.md  demo.ipynb  demo.py  eval_movielens.py  guard.py  log.py  pyproject.toml  run_evaluation.py
detectors/: __init__.py  access_frequency.py  gradient_anomaly.py  tia.py
dlattack_research/: amazon_main.py  check_env.py  dlattack_colab.ipynb  evaluate_attack.py  main.py  run_attack.py  test_attack.py  test_data.py  test_detect.py  test_model.py  test_pipeline.py  test_train.py  train_baseline.py
dlattack_research/src/: amazon_dataset.py  attack.py  dataset.py  detect.py  distributed.py  evaluate.py  model.py  train.py
dlattack_research/src/models/: __init__.py  dlrm.py  (+1 more)
embdguard/: __init__.py  guard.py  stats.py
embdguard/detectors/: __init__.py  access_frequency.py  gradient_anomaly.py  tia.py
kaggle/: embdguard-movielens.ipynb  kernel-metadata.json
kaggle/gpu-test/: gpu-test.ipynb  kernel-metadata.json
notebooks/: amazon_dlattack_colab.ipynb  amazon_embdguard_colab.ipynb  demo.ipynb  validate_movielens.ipynb
src/: alerts.py  guard.py  hooks.py  stats.py
src/defenses/: __init__.py  gradient_clip.py  interaction_filter.py  row_freeze.py
src/detectors/: __init__.py  access_frequency.py  embedding_drift.py  gradient_anomaly.py  gradient_distribution.py  temporal_access.py  tia.py
src/evaluation/: __init__.py  compare.py  harness.py  sensitivity.py
src/models/: common.py
tests/: conftest.py  test_defenses.py  test_detectors.py  test_evaluation.py  test_guard.py  test_hooks.py  test_new_detectors.py  test_stats.py
