[project]
name = "embdguard"
version = "0.1.0"
description = "Embedding-level poisoning detection for TorchRec recommender models"
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "torchrec", "pandas>=1.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
